avatar to register and doc fix added
