# docs/swagger.json
@@ -11,7 +11,7 @@
   },
   "servers": [
     {
-      "url": "http://127.0.0.1:3000",
+      "url": "http://localhost:3000",
       "description": "Local development server."
     },
     {
@@ -33,12 +33,12 @@
         ],
         "operationId": "authRegister",
         "security": [],
-        "summary": "Endpoint for user registration",
-        "description": "Registers a new user. Performs uniqueness checks and creates a new user record.\n\n- **Name**: required, 2–32 characters\n- **Email**: required, max 64 characters\n- **Password**: required, 8–64 characters\n",
+        "summary": "Endpoint for user registration with optional avatar upload",
+        "description": "Registers a new user. Performs uniqueness checks and creates a new user record. Validates data and stores user with hashed password and optional avatar URL.\n\n- **Name**: required, 2–32 characters\n- **Email**: required, max 64 characters\n- **Password**: required, 8–64 characters\n- **Avatar**: optional (image file)\n",
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/UserRegister"
               }
@@ -246,6 +246,10 @@
           "password": {
             "type": "string",
             "example": "mysecurepassword"
+          },
+          "avatar": {
+            "type": "string",
+            "format": "binary"
           }
         }
       },
@@ -264,13 +268,20 @@
             "type": "object",
             "properties": {
               "_id": {
-                "type": "string"
+                "type": "string",
+                "example": "60d0fe4f5311236168a109ca"
               },
               "name": {
-                "type": "string"
+                "type": "string",
+                "example": "John Doe"
               },
               "email": {
-                "type": "string"
+                "type": "string",
+                "example": "john@example.com"
+              },
+              "avatar": {
+                "type": "string",
+                "example": "https://res.cloudinary.com/demo/image/upload/sample.jpg"
               }
             }
           }
